# cc-statusline

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.claude/handoffs/: 92125479_2026-06-03_20-20.md
examples/: sample-input.json
skill/ctx-left/: SKILL.md
src/: main.rs
