[package]
name = "statusline"
version = "0.1.0"
edition = "2021"
description = "Fast Rust statusline for Claude Code"
repository = "https://github.com/efebia-com/cc-statusline"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = "1"
# Local wall-clock time for the leading timestamp field (HH:MM:Day).
# `clock` only — no default features — keeps the dependency small.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# In-process SQLite, statically bundled (compiles the SQLite C amalgamation into
# the binary) — no external `sqlite3` CLI / system libsqlite3, portable Win/Mac/Linux.
rusqlite = { version = "0.31", features = ["bundled"] }

# Optimize the release binary for size — statusline runs constantly,
# so smaller binary = faster cold-start (less to mmap into memory).
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
